# ML_from_scratch

./: pyproject.toml
src/ml_from_scratch/: __init__.py
src/ml_from_scratch/data/: data_ingest.py
src/ml_from_scratch/models/: transformer.py
