[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JagpreetJakhar", email = "jagpreetjakhar94@gmail.com" }
]
requires-python = ">=3.9.6"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "prettytable>=3.14.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[project.scripts]
ml-from-scratch = "ml_from_scratch:main"
data-ingest = "ml_from_scratch.data.data_ingest:main"
transformers = "ml_from_scratch.models.transformer:main"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
